# SECDED_hmatrix_generator

./: README.md  pyproject.toml
src/: __init__.py  cli.py  gen_hmatrix.py  metrics.py  rtl_verification.py  secded_codec.py  sv_generator.py  xor_depth.py
tests/: conftest.py  test_benchmark.py  test_cli.py  test_edge_cases.py  test_error_handling.py  test_hmatrix.py  test_integration.py  test_properties.py  test_rtl_verification.py  test_secded_functional.py  test_sv_generator.py  test_xor_depth.py
