[project]
name = "secded-hmatrix-generator"
version = "0.1.0"
description = "SECDED H-Matrix Generator with Hamming and Hsiao schemes"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]
